<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Flags Quiz</string>
<!--    <string name="ad_id">ca-app-pub-3940256099942544~3347511713</string>-->
<!--    <string name="banner_test">ca-app-pub-3940256099942544/6300978111</string>-->
<!--    <string name="Interstatial_test">ca-app-pub-3940256099942544/1033173712</string>-->

    <string name="ad_id">ca-app-pub-2710241286669528~8196001367</string>
    <string name="banner_test">ca-app-pub-2710241286669528/1584870299</string>
    <string name="Interstatial_test">ca-app-pub-2710241286669528/2553572690</string>




    <string name="best_score_recorded">BEST SCORE RECORDED</string>
    <string name="answer_a">Answer A</string>
    <string name="answer_b">Answer B</string>
    <string name="answer_c">Answer C</string>
    <string name="answer_d">Answer D</string>
    <string name="easy">EASY</string>
    <string name="play">PLAY</string>
    <string name="score">SCORE</string>
    <string name="select_mode">Select Mode</string>
    <string name="score_0">Try another level</string>
    <string name="passed_0_30">Game is Over</string>
    <string name="try_again">TRY AGAIN</string>

    <string name="Share">Share The App</string>
    <string name="RateApp">Rate The App</string>
    <string name="MoreApps">More Apps</string>

    <string name="SCORE">SCORE</string>
    <string name="TOTAL">TOTAL</string>
    <string name="Correct">Correct</string>
    <string name="InCorrect">InCorrect</string>
    <string name="Share_App">Share the App</string>
    <string name="CORRECT">CORRECT</string>
    <string name="totalquestion">Total</string>
    <string name="settings">Settings</string>
    <string name="_1_222">1/222</string>
    <string name="todo1">TODO</string>
    <string name="PASSED">PASSED : %d/%d</string>
    <string name="Wrong">Wrong</string>
    <string name="correct">Correct :</string>

    <string name="Score_result">Wrong Answers:</string>
    <string name="exit">Are you sure you want to exit ?</string>
    <string name="open_google_play">open google play?</string>


</resources>
