<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:ads="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/activity_playing"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/backgroundPage"
                tools:context=".GameActivity">

    <ImageView
            android:id="@+id/question_flag"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_alignParentTop="true"

            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/united_kingdom"
            android:contentDescription="TODO"
            android:gravity="center"/>

    <RelativeLayout
        android:layout_width="match_parent"
     android:id="@+id/relative1"
        android:layout_height="match_parent"
        android:layout_below="@+id/question_flag"

        android:background="@drawable/round_corner"
        android:paddingTop="10dp">

        <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardBackgroundColor="#d3d3d3"
                card_view:cardCornerRadius="5dp"
                android:elevation="5dp"
                android:layout_margin="7dp"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="7dp"
                android:layout_marginStart="7dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="7dp"
                android:layout_marginEnd="7dp"
                android:layout_alignParentTop="true"
                tools:targetApi="lollipop">


            <LinearLayout
                    android:id="@+id/btnGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal"
                        android:weightSum="3">


                    <TextView
                            android:id="@+id/wronganswercount"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:text="@string/Wrong"
                            android:textSize="20sp"
                            android:background="@color/red"
                            android:gravity="center"
                            android:freezesText="true"
                            android:textColor="@color/white"
                            android:layout_weight="1"/>

                    <TextView
                            android:id="@+id/txtQuestion"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:freezesText="true"
                            android:gravity="center"
                            android:text="@string/totalquestion"
                            android:textSize="20sp"
                            android:background="@color/green"
                            android:textColor="@color/white"/>


                    <TextView
                            android:id="@+id/txtScore"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="#3490de"
                            android:freezesText="true"
                            android:gravity="center"
                            android:text="@string/correct"
                            android:textSize="20sp"
                            android:textColor="@color/white"/>
                </LinearLayout>

                <ProgressBar
                        android:id="@+id/progressBar"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:max="30"/>

                <Button
                        android:id="@+id/btnAnswerA"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="20dp"
                        android:background="@color/optionBtnColor"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:freezesText="true"
                        android:text="@string/answer_a"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:theme="@style/MyButton"
                        android:textSize="18sp"/>

                <Button
                        android:id="@+id/btnAnswerB"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="20dp"
                        android:background="@color/optionBtnColor"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:freezesText="true"
                        android:text="@string/answer_b"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:theme="@style/MyButton"
                        android:textSize="18sp"/>

                <Button
                        android:id="@+id/btnAnswerC"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="20dp"
                        android:background="@color/optionBtnColor"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:freezesText="true"
                        android:text="@string/answer_c"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:theme="@style/MyButton" android:textSize="18sp"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </RelativeLayout>

    <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="1dp"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_test"/>
</RelativeLayout>
